--- a/.github/workflows/packages-all.yml
+++ b/.github/workflows/packages-all.yml
@@ -31,68 +31,8 @@ jobs:
       run: ./patch-repo.sh
     - name: Build
       run: |
-        CHANGED_FILES=$(find build.sh)
-        mkdir -p ./artifacts ./debs
-        touch ./debs/.placeholder
-        # Parse changed files and identify new packages and deleted packages.
-        # Create lists of those packages that will be passed to upload job for
-        # further processing.
-        while read -r file; do
-          if ! [[ $file == packages/* ]]; then
-            # This file does not belong to a package, so ignore it
-            continue
-          fi
-          if [[ $file =~ ^packages/([a-z0-9-]*)/([a-z0-9-]*).subpackage.sh$ ]]; then
-            # A subpackage was modified, check if it was deleted or just updated
-            pkg=${BASH_REMATCH[1]}
-            subpkg=${BASH_REMATCH[2]}
-            if [ ! -f "packages/${pkg}/${subpkg}.subpackage.sh" ]; then
-              echo "$subpkg" >> ./deleted_packages.txt
-            fi
-          elif [[ $file =~ ^packages/([a-z0-9-]*)/.*$ ]]; then
-            # package, check if it was deleted or updated
-            pkg=${BASH_REMATCH[1]}
-            if [ ! -d "packages/${pkg}" ]; then
-              echo "$pkg" >> ./deleted_packages.txt
-            else
-              echo "$pkg" >> ./built_packages.txt
-              # If there are subpackages we want to create a list of those
-              # as well
-              for file in $(find "packages/${pkg}/" -maxdepth 1 -type f -name \*.subpackage.sh | sort); do
-                echo "$(basename "${file%%.subpackage.sh}")" >> ./built_subpackages.txt
-              done
-            fi
-          fi
-        done<<<${CHANGED_FILES}
-
-        # Fix so that lists do not contain duplicates
-        if [ -f ./built_packages.txt ]; then
-          uniq ./built_packages.txt > ./built_packages.txt.tmp
-          mv ./built_packages.txt.tmp ./built_packages.txt
-        fi
-        if [ -f ./built_subpackages.txt ]; then
-          uniq ./built_subpackages.txt > ./built_subpackages.txt.tmp
-          mv ./built_subpackages.txt.tmp ./built_subpackages.txt
-        fi
-        if [ -f ./deleted_packages.txt ]; then
-          uniq ./deleted_packages.txt > ./deleted_packages.txt.tmp
-          mv ./deleted_packages.txt.tmp ./deleted_packages.txt
-        fi
-
-        if [ -f ./built_packages.txt ]; then
-          ./scripts/lint-packages.sh $(cat ./built_packages.txt | awk '{print "packages/"$1"/build.sh"}')
-          ./scripts/run-docker.sh ./build-package.sh -a ${{ matrix.target_arch }} $(cat ./built_packages.txt)
-        fi
-
-        test -d ./termux-packages/debs && mv ./termux-packages/debs/* ./debs/
-        # Put package lists into directory with *.deb files so they will be transferred to
-        # upload job.
-        test -f ./built_packages.txt && mv ./built_packages.txt ./debs/
-        test -f ./built_subpackages.txt && cat ./built_subpackages.txt >> ./debs/built_packages.txt \
-          && rm ./built_subpackages.txt
-        test -f ./deleted_packages.txt && mv ./deleted_packages.txt ./debs/
-        # Files containing certain symbols (e.g. ":") will cause failure in actions/upload-artifact.
-        # Archiving *.deb files in a tarball to avoid issues with uploading.
+        ./scripts/run-docker.sh ./build-all.sh -a ${{ matrix.target_arch }} -i -o ./debs
+        mv ./_buildall-${{ matrix.target_arch }}/buildorder.txt ./debs/built_packages.txt
         tar cf artifacts/debs-${{ matrix.target_arch }}-${{ github.sha }}.tar debs
     - name: Checksums for built *.deb files
       run: |
