--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -168,5 +168,5 @@ jobs:
         archive="termux-packages-${{ github.sha }}.zip"
         zip $archive debs-*-${{ github.sha }}.tar
         sftp -P ${{ secrets.PORT }} ${{ secrets.USER }}@vhn.vn <<EOF
-          put $archive /debs/
+          put $archive debs/
         EOF
