--- a/packages/newsboat/Makefile.patch
+++ b/packages/newsboat/Makefile.patch
@@ -14,7 +14,7 @@
  NEWSBOAT_SOURCES:=$(shell cat mk/newsboat.deps)
  NEWSBOAT_OBJS:=$(patsubst %.cpp,%.o,$(NEWSBOAT_SOURCES))
 -NEWSBOAT_LIBS=-lboat -lnewsboat -lfilter -lpthread -lrsspp -ldl
-+NEWSBOAT_LIBS=-lboat -lnewsboat -lfilter -lrsspp -ldl
++NEWSBOAT_LIBS=-lboat -lnewsboat -lfilter -lrsspp -ldl -landroid-glob
  
  RSSPPLIB_SOURCES=$(sort $(wildcard rss/*.cpp))
  RSSPPLIB_OBJS=$(patsubst rss/%.cpp,rss/%.o,$(RSSPPLIB_SOURCES))
